--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
 
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
@@ -34,6 +35,11 @@ dependencies:
   shared_preferences: ^2.0.3
   google_fonts: ^2.0.0
   provider:
+  cloud_firestore:
+  firebase_storage:
+#  file_picker:
+  image_picker:
+  permission_handler:
 
 dev_dependencies:
   flutter_test:
