--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_auth:
   google_sign_in:
   shared_preferences: ^2.0.3
+  qr_code_scanner: ^0.3.5
   google_fonts: ^2.0.0
   provider:
   cloud_firestore:
