--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,12 @@ dependencies:
   qr_code_scanner: ^0.3.5
   google_fonts: ^2.0.0
   provider:
+  toast: ^0.1.5
   cloud_firestore:
   firebase_storage:
 #  file_picker:
   image_picker:
+  encrypt: ^4.1.0
   permission_handler:
 
 dev_dependencies:
