--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,11 @@ dependencies:
   toast: ^0.1.5
   cloud_firestore:
   firebase_storage:
+  flutter_share_file: ^1.2.1+6
 #  file_picker:
   image_picker:
   permission_handler:
+  flutter_statusbarcolor: ^0.2.3
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +64,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - images/
     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
